
29. Change: strings.image handles enumerated items.

30. Fix: failed assignments to array variables or anonymous array variables during declaration will delete the half-declared variable.

31. Fix: backquotes handled correctly in a shell word when the backquotes are not the first item in the word.

32. [Fedja B] Change: If Git exists, configure will use Git to create the build version string attached to the development command prompt.  Otherwise, the current date is used as before.

33. [Marek K] New: New directory function.

34. [Marek K] Change: Changes to support Ubuntu 19.10.

35. New: help command now supports -h and -m to produce HTML and Groff (man page) output for internal help topics.

36. Fix: certain checks for readable and executable files now handle root and gid groups better.

37. Change: help for scripts now rendered with the same report class as the built-in topics.

38. New: New annotations: content, examples, exceptions, footer.

39. New: pragma manual_test, pragma manual_test_result for manual testing.

40. Change: For security, the directory containing the current script, with separate files, local profile, global profile, global policy or global config file must be readable and not world writable.  This follows Perl and Ruby (taint mode).

41. Fix: concrete vs abstract error on a type of array elements but is never otherwise used is fixed.

42. [Pascal B] Fix: Additional error checking enabled on Ada compiler.  Several new errors, mostly harmless and related to static code analysis, have been fixed.

43. [Pascal B] Fix: Fixed various static code analysis errors on sample programs as a part of testing item 42.

44. Fix: Copying volatiles no longer results in conflicting error messages.

45. Fix: Pragma ada_95 wasn't being enforced during syntax checking but at run-time.  Now is enforced for both.
