@@ -40,6 +40,8 @@ Priority Issues (Fix These First)
   - disabling qualifiers when tests are underway and special regression
     tests for the same. (tests)
   - should subprogram parameters allow qualifiers?
+- memecache.new_cluster and sister function cannot return a value
+  if resource using types are limited
 - affirm blocks
     - test if HTML escaping can be implemented in an affirm block
     - should affirm blocks have an expression short-form?
